feat: e2e tests + fixes
